# Maitland

./: Makefile  README.txt
packers/exepak-1.5/ucl-1.02/: .cvsignore  INSTALL  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.hin  configure  configure.ac
packers/exepak-1.5/ucl-1.02/B/: 00README.TXT
packers/exepak-1.5/ucl-1.02/B/dos16/: bc.bat  bc.rsp  bc_286.bat  bc_pp.bat  dm.bat  mc.bat  mc_qc.bat  qc.bat  tc.bat  vc.bat  vc_qc.bat  wc.bat  wc.rsp
packers/exepak-1.5/ucl-1.02/B/dos32/: bc_pp.bat  dj2.bat  dm.bat  emx.bat  wc.bat  zc.bat
packers/exepak-1.5/ucl-1.02/B/os2/: emx.bat  wc.bat  zc.bat
packers/exepak-1.5/ucl-1.02/B/os2_16/: wc.bat
packers/exepak-1.5/ucl-1.02/B/win16/: bc.bat  mc.bat  vc.bat  wc.bat
packers/exepak-1.5/ucl-1.02/B/win32/: bc.bat  bc.rsp  cygwin.bat  cygwin.rsp  dm.bat  ic.bat  lcc.bat  mingw.bat  pgi.bat  pw32.bat  rsxnt.bat  vc.bat  vc.rsp  vc_dll.bat  vc_dll.def  (+3 more)
packers/exepak-1.5/ucl-1.02/acconfig/: ltmain.sh
packers/exepak-1.5/ucl-1.02/debian/: .cvsignore  changelog  control  copyright  libucl-dev.install  libucl1.install  rules
packers/exepak-1.5/ucl-1.02/examples/: .cvsignore  Makefile.am  Makefile.in  lutil.h  simple.c  uclpack.c
packers/exepak-1.5/ucl-1.02/include/: Makefile.am  Makefile.in
packers/exepak-1.5/ucl-1.02/src/: .cvsignore  Makefile.am  Makefile.in  alloc.c  n2_99.ch  n2b_99.c  n2b_d.c  n2b_ds.c  n2b_to.c  n2d_99.c  n2d_d.c  n2d_ds.c  n2d_to.c  n2e_99.c  n2e_d.c  n2e_ds.c  n2e_to.c  ucl_conf.h  ucl_crc.c  ucl_dll.ch  ucl_init.c  ucl_mchw.ch  ucl_ptr.c  ucl_ptr.h  ucl_str.c  ucl_swd.ch  ucl_util.c
(+428 files in other folders)
